# WebSockets

./: .gitignore  pyproject.toml
.github/workflows/: ci-cd.yml
app/: __init__.py
static/: static.py
templates/: static.html
tests/: test_app.py  test_calc.py
websockets/: calc.py  other_func.py
